# ataque_hash

./: .gitignore  README.md  gerar_lab_hashes.py  pyproject.toml
hashcat/: gerar_sha256_hashcat.py
john/: gerar_md5_john.py
src/: gerar_lab_hashes.py  helper.py
src/hashcat/: gerar_bcrypt.py  gerar_sha256_hashcat.py
src/john/: gerar_md5_john.py
src/ophcrack/: gerar_ntlm.py
